--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "start": "NODE_ENV=production node dist/server.js",
     "dev": "NODE_ENV=development nodemon src/server.ts"
   },
